# drumsticks

./: CMakeLists.txt  bluetooth_test.py  generate_sounds.py
main/: CMakeLists.txt  IMU.c  IMU.h  bleprph.h  drum_pipeline.c  drum_pipeline.h  gatt_svr.c  main.c
